--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,12 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+ 
+  if error
+    p=error
+  else
+   h4 All Categories:
+  each category in category_list
+   ul 
+     li 
+       a(href=category.url) #{category.name}
