--- a/views/product_details.pug
+++ b/views/product_details.pug
@@ -12,3 +12,6 @@ block content
    p #[strong Category:]
    a(href=categoryField.url) #{categoryField.name}
   
+  hr
+  a(href=product.url+'/update') Update product
+  a(href=product.url+'/delete') Delete product
