--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -17,5 +17,5 @@ block content
       else
         p This category has no products
   hr
-  p
+  a(href=category.url+'/update') Update category
   a(href=category.url+'/delete') Delete category
