--- a/views/product_details.pug
+++ b/views/product_details.pug
@@ -13,5 +13,8 @@ block content
    a(href=categoryField.url) #{categoryField.name}
   
   hr
+  div
   a(href=product.url+'/update') Update product
+  
+  div
   a(href=product.url+'/delete') Delete product
