--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -17,5 +17,7 @@ block content
       else
         p This category has no products
   hr
+  div
   a(href=category.url+'/update') Update category
+  div
   a(href=category.url+'/delete') Delete category
