--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,7 +25,7 @@ html(lang='en')
               li
                 a(href='/store/category/create') Create new category
               li
-                a(href='/store/product/create') Create new products
+                a(href='/store/product/create') Create new product
 
 
         div(class='col-sm-10')
